--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "@keystonejs/auth-password": "^6.0.1",
     "@keystonejs/fields": "^22.0.0",
     "@keystonejs/keystone": "^19.2.0",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "npm": "^7.6.0"
   }
 }
